<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OurAdressActivity"
    android:background="@drawable/image1">

    <TextView
        android:id="@+id/physicalAddress"
        style="@style/addressTextStyle"
        android:text="@string/_14_rue_du_bonheur_et_du_gout_75017_paris_france"
        app:layout_constraintBottom_toTopOf="@id/emailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/emailAddress"
        style="@style/addressTextStyle"
        android:text="@string/email_mybestmealresto_bestmeal_com"
        app:layout_constraintBottom_toTopOf="@id/phoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/physicalAddress"/>

    <TextView
        android:id="@+id/phoneNumber"
        style="@style/addressTextStyle"
        android:text="@string/tel_33_0_1234567890"
        app:layout_constraintBottom_toTopOf="@id/messageTextZone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddress"/>


    <LinearLayout
        android:id="@+id/messageTextZone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber">

        <EditText
            android:id="@+id/messageText"
            android:hint="@string/leave_us_a_word"
            style="@style/addressMessageTextStyle"/>

        <Button
            android:id="@+id/sendMessage"
            android:text="@string/submit"
            android:layout_marginTop="5dp"
           style="@style/appButtonStyle"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>