<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <ImageView
            android:id="@+id/homeTransition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <Button
            android:id="@+id/bookNowButton"
            style="@style/appButtonStyle"
            android:text="@string/book_now"
            app:layout_constraintBottom_toTopOf="@id/discoverButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/discoverButton"
            style="@style/appButtonStyle"
            android:text="@string/discover_the_menu"
            app:layout_constraintBottom_toTopOf="@id/ourAddressButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bookNowButton" />

        <Button
            android:id="@+id/ourAddressButton"
            style="@style/appButtonStyle"
            android:text="@string/our_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/discoverButton" />

</androidx.constraintlayout.widget.ConstraintLayout>